--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@mui/material": "^5.15.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-github-calendar": "3.1.2",
+    "react-github-calendar": "^4.1.3",
     "react-icons": "^5.0.1",
     "react-vertical-timeline-component": "^3.6.0",
     "typewriter-effect": "^2.21.0"
